gitlab/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-unicorn
  namespace: gitlab
  labels:
    app: unicorn
    chart: unicorn-2.1.7
    release: gitlab
    heritage: Tiller
    
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.provider: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
    
spec:
  rules:
    - host: gitlab.centos.local
      http:
        paths:
          - path: /
            backend:
              serviceName: gitlab-unicorn
              servicePort: 8181
          - path: /admin/sidekiq
            backend:
              serviceName: gitlab-unicorn
              servicePort: 8080
  tls:
    - hosts:
      - gitlab.centos.local
      secretName: gitlab-wildcard-tls
---
# Source: gitlab/charts/minio/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-minio
  namespace: gitlab
  labels:
    app: minio
    chart: minio-0.4.3
    release: gitlab
    heritage: Tiller
    
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.provider: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    
spec:
  rules:
    - host: minio.centos.local
      http:
        paths:
          - path: /
            backend:
              serviceName: gitlab-minio-svc
              servicePort: 9000
  tls:
    - hosts:
      - minio.centos.local
      secretName: gitlab-wildcard-tls
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-registry
  namespace: gitlab
  labels:
    app: registry
    chart: registry-0.2.0
    release: gitlab
    heritage: Tiller
    
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.provider: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    
spec:
  rules:
    - host: registry.centos.local
      http:
        paths:
          - path: /
            backend:
              serviceName: gitlab-registry
              servicePort: 5000
  tls:
    - hosts:
      - registry.centos.local
      secretName: gitlab-wildcard-tls
